# rember

./: .env.example  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-0412d76ad69ae0d2bea7d3bb90078deff0b0de50887cb4bc2e6bf7ab1659d02e.json  query-1b46d5e604ef57fc95ce23e97a03c90e04bc3567d3806df239e698539ce770ee.json  query-33e7d629af8116b1d45d358aa12a9ce956e3f8a32cc5d561edfd7cdbbacc638e.json  query-6415b5308cb626a14ce2ebaf6349b67b8a00c154d31ec3c2244294ccbab1234b.json  query-8a413a5257e0e8779d10e0a2a28769f1ae41f5ec90edf1acf5e5796ba695f130.json  query-b713660c82959c6e6ee448eb5ddad0fdd3632d053079dd1253c7c65bfb201b5d.json  query-fcb57b637918b406a64978eca79b20953e5cf446ad7f241aa4f3f8b662fda0a3.json
backend/migrations/: 20250808072001_init.sql
backend/queries/: note_list_search.sql
backend/scripts/: test_ws.sh
backend/src/: main.rs
backend/src/engine/: core.rs  mod.rs  serializer.rs
backend/src/engine/database/: mod.rs  notes.rs  service.rs  tags.rs
backend/src/engine/database/migrations/: 20250808072001_init.sql
backend/src/engine/database/queries/: note_list_search.sql
backend/src/server/: listener.rs  mod.rs  websocket.rs
clients/manual/: run.sh
clients/tui/: Cargo.toml
clients/tui/src/: clipboard.rs  events.rs  focus.rs  keys.rs  main.rs  renderer.rs  search.rs  text_box.rs
clients/tui/src/client/: websocket.rs
rember_rust_shared/: Cargo.toml
rust_shared/: Cargo.toml
rust_shared/src/: lib.rs  request.rs  response.rs
