[package]
name = "rember-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }
futures = { version = "0.3.31" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
dotenvy = { version = "0.15.7" }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
uuid = { version = "1.17.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
