[package]
name = "rust_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
sqlx = { version = "0.8.6", features = ["macros", "uuid", "chrono"] }
uuid = { version = "1.17.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
